--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 .container {
-  width: 600px;
+  width: 800px;
   margin: 0 auto;
 }
 
 .card {
   margin-top: 20px;
-  padding: 5px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   border-radius: 5px;
   background-color: white;
   box-shadow: 5px 5px 8px lightgrey;
@@ -68,7 +69,7 @@ h3 {
 }
 
 ul {
-  font-size: 18px;
+  font-size: 24px;
   list-style-type: none;
   margin: 5 auto;
 
@@ -95,4 +96,33 @@ thead > tr {
   width: 100px;
   height: 100px;
   margin-left: 25px;
+}
+
+#sidebar {
+  position: fixed;
+  width: 150px;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #384047;
+}
+
+#sidebar > ul > li {
+  margin-top: 50px;
+  font-size:35px;
+  color:#788188;
+  text-align: center;
+  list-style-type: none;
+}
+
+#sidebar > ul {
+  padding-left: 0;
+}
+
+#page-content {
+  margin-left: 150px;
+}
+
+#sidebar > ul > li:hover {
+  color:white;
 }
